add material design test contact form and submit for deployment

--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -10,114 +10,118 @@
         <div class="jumbotron-fluid">
             <h1 class="jumbotron-title mb-0">Book A Meeting</h1>
         </div>
-        <div class="contact-form-container">
-            <div class="choice-1">
-                <h1 class="item-name" data-toggle="collapse" data-target="#collapse1"><span class="number">1.</span>
-                    Choose a service</h1>
-                <div class="collapse" id="collapse1">
-                    <div class="row">
-
-
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="choice-2">
-                <h1 class="item-name" data-toggle="collapse" data-target="#collapse2"><span class="number">2.</span>
-                    Date and time</h1>
-                <div class="collapse" id="collapse2">
-                    <div class="row">
-
-
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="choice-3">
-                <h1 class="item-name" data-toggle="collapse" data-target="#collapse3"><span class="number">3.</span>
-                    Your Information</h1>
-                <div class="collapse" id="collapse3">
-                    <div class="row">
-
-
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="btn card col-12 col-md-4">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-
-
+        <div class="container text-center my-5">
+            <p>Please fill in your details below as well as the services you would like and I will come pay you a visit
+                based on your desired time and place.</p>
         </div>
+        <form action="https://liveformhq.com/form/04a07a3d-0938-42ae-9ee8-7a6d880942e4" method="POST"
+            accept-charset="utf-8">
+            <input type="hidden" value="http://localhost:3000/contact/" name="_redirect" />
+
+            <div class="contact-form-container">
+                <div class="choice-1">
+                    <h1 class="item-name" data-toggle="collapse" data-target="#collapse1"><span class="number">1.</span>
+                        Choose a service</h1>
+                    <div class="collapse" id="collapse1">
+                        <div class="row">
+                            <div class="col-12 col-md-4 col-lg-3 custom-control custom-checkbox custom-control-inline">
+                                <h4>Service One</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, repellendus?</p>
+                                <div class="mdc-touch-target-wrapper">
+                                    <div class="mdc-checkbox mdc-checkbox--touch">
+                                        <input type="checkbox" class="mdc-checkbox__native-control" id="checkbox-1"
+                                            id="serviceOne" value="The user would like service One"
+                                            name="Service One" />
+                                        <div class="mdc-checkbox__background">
+                                            <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                                                <path class="mdc-checkbox__checkmark-path" fill="none"
+                                                    d="M1.73,12.91 8.1,19.28 22.79,4.59" />
+                                            </svg>
+                                            <div class="mdc-checkbox__mixedmark"></div>
+                                        </div>
+                                        <div class="mdc-checkbox__ripple"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-3 custom-control custom-checkbox custom-control-inline">
+                                <h4>Service Two</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, repellendus?</p>
+                                <div class="mdc-touch-target-wrapper">
+                                    <div class="mdc-checkbox mdc-checkbox--touch hover-indeterminate">
+                                        <input type="checkbox" class="mdc-checkbox__native-control" id="checkbox-2"
+                                            id="serviceTwo" value="The user would like service Two"
+                                            name="Service Two" />
+                                        <div class="mdc-checkbox__background">
+                                            <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                                                <path class="mdc-checkbox__checkmark-path" fill="none"
+                                                    d="M1.73,12.91 8.1,19.28 22.79,4.59" />
+                                            </svg>
+                                            <div class="mdc-checkbox__mixedmark"></div>
+                                        </div>
+                                        <div class="mdc-checkbox__ripple"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4 col-lg-3 custom-control custom-checkbox custom-control-inline">
+                                <h4>Service Three</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, repellendus?</p>
+                                <div class="mdc-touch-target-wrapper">
+                                    <div class="mdc-checkbox mdc-checkbox--touch">
+                                      <input type="checkbox"
+                                             class="mdc-checkbox__native-control"
+                                             id="checkbox-3" id="serviceThree" value="The user would like service three" name="Service Three"/>
+                                      <div class="mdc-checkbox__background">
+                                        <svg class="mdc-checkbox__checkmark"
+                                             viewBox="0 0 24 24">
+                                          <path class="mdc-checkbox__checkmark-path"
+                                                fill="none"
+                                                d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+                                        </svg>
+                                        <div class="mdc-checkbox__mixedmark"></div>
+                                      </div>
+                                      <div class="mdc-checkbox__ripple"></div>
+                                    </div>
+                                  </div>
+                                  </div>
+
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="choice-2">
+                    <h1 class="item-name" data-toggle="collapse" data-target="#collapse2"><span class="number">2.</span>
+                        Date and time</h1>
+                    <div class="collapse" id="collapse2">
+
+                    </div>
+                </div>
+
+
+                <div class="choice-3">
+                    <h1 class="item-name" data-toggle="collapse" data-target="#collapse3"><span class="number">3.</span>
+                        Your Information</h1>
+                    <div class="collapse" id="collapse3">
+
+                    </div>
+                </div>
+
+
+            </div>
 
 
     </div>
+    <div class="jumbotron text-center">
+        <p>Click here to submit your request.</p>
+        <button type="submit" class="mdc-button foo-button">
+            <div class="mdc-button__ripple"></div>
+            <span class="mdc-button__label">Submit</span>
+        </button>
+    </div>
+
+    </form>
+
+
 
     {% endblock %}
