--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -7,19 +7,23 @@
     {% if page.title %}
     <title>{{ page.title }}</title>
     {% else %}
-        <title>Francis Interior Designs</title>
+    <title>Francis Interior Designs</title>
     {% endif %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://kit.fontawesome.com/c7bd47bb33.js" crossorigin="anonymous"></script>
 
     {% block styles %}
-{% comment %} 
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endcomment %}
+    <script src="https://kit.fontawesome.com/c7bd47bb33.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+
+
 
     {% compress css %}
-        <link type="text/x-scss" href="{% static 'css/styles.scss' %}" rel="stylesheet" media="screen">
+    <link type="text/x-scss" href="{% static 'css/styles.scss' %}" rel="stylesheet" media="screen">
     {% endcompress %}
     {% endblock  %}
 </head>
@@ -35,14 +39,23 @@
             {% block content %}
             {% endblock  %}
         </div>
-    </div> 
-    
+    </div>
+
     {% include '_includes/_footer.html' %}
 
     {% block scripts %}
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
+
+    <script src="{% static 'js/scripts.js'%}"></script>
+
 
     {% endblock  %}
 </body>
