--- a/static/css/_colors.scss
+++ b/static/css/_colors.scss
@@ -4,3 +4,11 @@ $alt-bg: #564787;
 $body-color: #F2FDFF;
 $body-bg: #101935;
 
+$mdc-theme-primary: #6200ee;
+$mdc-theme-secondary: #101935;
+
+$unmarked-stroke-color:#F2FDFF;
+$unmarked-fill-color:#F2FDFF;
+$marked-stroke-color:#F2FDFF; 
+$marked-fill-color:#F2FDFF; 
+$generate-keyframes:#F2FDFF;
