--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -260,6 +260,7 @@
 
   .skills {
     padding: 2rem;
+
     h3 {
       color: $accent;
       font-weight: 900;
@@ -299,6 +300,16 @@
     }
   }
 
+  .choice-1 {
+    .custom-control-inline {
+      display: block;
+      margin: 2rem;
+      background-color: #564787;
+      padding: 4rem 4rem 1rem 4rem;
+      text-align: center;
+
+    }
+  }
   .choice-1,
   .choice-2,
   .choice-3 {
@@ -336,15 +347,6 @@
     padding: 1.125rem;
   }
 
-  .card {
-    margin: 0.4rem 0rem;
-    background-color: $alt-bg;
-
-    &:hover {
-      background-color: $accent;
-      color: $body-bg;
-    }
-  }
 }
 
 footer {
