--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -16,7 +16,7 @@
         </div>
         <form action="https://liveformhq.com/form/04a07a3d-0938-42ae-9ee8-7a6d880942e4" method="POST"
             accept-charset="utf-8">
-            <input type="hidden" value="http://localhost:3000/contact/" name="_redirect" />
+            <input type="hidden" value="https://francisinteriordesigns.pythonanywhere.com/contact/" name="_redirect" />
 
             <div class="contact-form-container">
                 <div class="choice-1">
@@ -118,18 +118,18 @@
                         <div class="row text-center">
                             <div class="col-12 form-group">
                                 <label for="firstName">First Name</label>
-                                <input type="text" class="form-control mb-2 w-75 mx-auto" id="firstName" placeholder="John">
+                                <input type="text" class="form-control mb-2 w-75 mx-auto" id="firstName" name="First Name" placeholder="John">
                                 <label for="lastName">Last Name</label>
-                                <input type="text" class="form-control w-75 mx-auto" id="lastName" placeholder="Doe">
+                                <input type="text" class="form-control w-75 mx-auto" id="lastName" name="Last Name" placeholder="Doe">
                               </div>
                             <div class="col-12 form-group">
                                 <label for="email">Email address</label>
-                                <input type="email" class="form-control w-75 mx-auto" id="email" placeholder="name@example.com">
+                                <input type="email" class="form-control w-75 mx-auto" id="email" name="Email" placeholder="name@example.com">
             
                               </div>
                               <div class="col-12 form-group">
                                 <label for="phoneNumber">Phone Number</label>
-                                <input type="text" class="form-control w-75 mx-auto" id="phoneNumber" placeholder="+254721234567">
+                                <input type="text" class="form-control w-75 mx-auto" id="phoneNumber" name="Phone Number" placeholder="+254721234567">
                               </div>
                               <div class="col-12 form-group">
                                   <textarea id="details" name="details" id="details" cols="30" rows="10" placeholder="You can use this form to add more details about your request" class="form-control w-75 mx-auto"></textarea>
