remove padding from submit btn

--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -116,18 +116,20 @@
                         Your Information</h1>
                     <div class="collapse" id="collapse3">
                         <div class="row text-center">
-                            <div class="col-12 form-group">
+                            <div class="col-12 col-md form-group">
                                 <label for="firstName">First Name</label>
                                 <input type="text" class="form-control mb-2 w-75 mx-auto" id="firstName" name="First Name" placeholder="John">
+                            </div>
+                            <div class="col-12 col-md form-group">
                                 <label for="lastName">Last Name</label>
                                 <input type="text" class="form-control w-75 mx-auto" id="lastName" name="Last Name" placeholder="Doe">
                               </div>
-                            <div class="col-12 form-group">
+                            <div class="col-12 col-md form-group">
                                 <label for="email">Email address</label>
                                 <input type="email" class="form-control w-75 mx-auto" id="email" name="Email" placeholder="name@example.com">
             
                               </div>
-                              <div class="col-12 form-group">
+                              <div class="col-12 col-md form-group">
                                 <label for="phoneNumber">Phone Number</label>
                                 <input type="text" class="form-control w-75 mx-auto" id="phoneNumber" name="Phone Number" placeholder="+254721234567">
                               </div>
@@ -145,7 +147,7 @@
 
 
     </div>
-    <div class="jumbotron text-center">
+    <div class="jumbotron pt-1 text-center">
         <p>Click here to submit your request.</p>
         <button type="submit" class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
