remove padding from submit btn

--- a/about/templates/about/about_page.html
+++ b/about/templates/about/about_page.html
@@ -16,7 +16,7 @@
 
   <div class="skills">
     <h3>{{ page.skills_title|richtext }}</h3>
-    <div class="text-center">
+    <div class="skills-list">
       <p>{{ page.skills_list|richtext }}</p>
     </div>
   </div>
