--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -8,11 +8,10 @@
 <div class="contact">
     <div class="container-fluid">
         <div class="jumbotron-fluid">
-            <h1 class="jumbotron-title mb-0">Book A Meeting</h1>
+            <h1 class="jumbotron-title mb-0">{{ page.headline_title|richtext }}</h1>
         </div>
         <div class="container text-center my-5">
-            <p>Please fill in your details below as well as the services you would like by clicking/tapping the checkbox and I will come pay you a visit
-                based on your desired time and place.</p>
+            <p>{{ page.headline_message|richtext }}</p>
         </div>
         <form action="https://liveformhq.com/form/04a07a3d-0938-42ae-9ee8-7a6d880942e4" method="POST"
             accept-charset="utf-8">
@@ -24,7 +23,7 @@
                         Choose a service</h1>
                     <div class="collapse" id="collapse1">
                         <div class="row">
-                            <div class="col-12 col-md-4 col-lg-3 custom-control custom-checkbox custom-control-inline">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 custom-control custom-checkbox custom-control-inline">
                                 <img src="https://via.placeholder.com/150" alt="" class="img-thumbnail my-2">
                                 <h4>Service One</h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, repellendus?</p>
@@ -47,7 +46,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-4 col-lg-3 custom-control custom-checkbox custom-control-inline">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 custom-control custom-checkbox custom-control-inline">
                                 <img src="https://via.placeholder.com/150" alt="" class="img-thumbnail my-2">
                                 <h4>Service Two</h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, repellendus?</p>
@@ -67,7 +66,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-4 col-lg-3 custom-control custom-checkbox custom-control-inline">
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-3 custom-control custom-checkbox custom-control-inline">
                                 <img src="https://via.placeholder.com/150" alt="" class="img-thumbnail my-2">
                                 <h4>Service Three</h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, repellendus?</p>
