--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -146,7 +146,7 @@
 
 
     </div>
-    <div class="jumbotron pt-1 text-center">
+    <div class="jumbotron pt-1 text-center mb-5">
         <p>Click here to submit your request.</p>
         <button type="submit" class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
