--- a/home/templates/_includes/_navbar.html
+++ b/home/templates/_includes/_navbar.html
@@ -1,7 +1,7 @@
 {% load wagtailcore_tags %}
 
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-  <a class="navbar-brand">FRANCIS INTERIORS</a>
+  <a class="navbar-brand brand" href="/">FRANCIS INTERIORS</a>
   <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
       aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
