test deployment production

--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -15,7 +15,7 @@
         </div>
         <form action="https://liveformhq.com/form/04a07a3d-0938-42ae-9ee8-7a6d880942e4" method="POST"
             accept-charset="utf-8">
-            <input type="hidden" value="https://francisinteriordesigns.pythonanywhere.com/contact/" name="_redirect" />
+            <input type="hidden" value="https://francisinteriordesigns.pythonanywhere.com/success/" name="_redirect" />
 
             <div class="contact-form-container">
                 <div class="choice-1">
